--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -11,8 +11,8 @@ on:
 # > git push origin --tags
 # The following operations will be run
 # 1. Extract `tag name`
-# 2. Use the `tag name` as `release version`
-# 3. Build the PyPI packeage
+# 2. TODO: Use the `tag name` as `release version`
+# 3. Build the PyPI packeage using /myosuite/__init__.py version
 # 4. Upload the package
 # 5. Test Upload
 
@@ -38,11 +38,10 @@ jobs:
       id: tag
       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
 
-    # 2. Use the `tag name` as `release version`
-    - name: Update version in setup.py
-      run: |
-        sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" setup.py
-        sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" /myosuite/__init__.py
+    # # 2. Use the `tag name` as `release version`
+    # - name: Update package version
+    #   run: |
+    #     sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" ./myosuite/__init__.py
 
     # 3. Build the PyPI packeage
     - name: Build a binary wheel
