--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,15 +24,17 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install mesa and patchelf
+      run: |
+        sudo apt-get install -y \
+            libgl1-mesa-dev \
+            libgl1-mesa-glx \
+            libglew-dev \
+            libosmesa6-dev \
+            software-properties-common
+        sudo apt-get install -y patchelf
     - name: Install dependencies
       run: |
-        apt-get install -y \
-          libgl1-mesa-dev \
-          libgl1-mesa-glx \
-          libglew-dev \
-          libosmesa6-dev \
-          software-properties-common
-        apt-get install -y patchelf
         python -m pip install --upgrade pip
         pip install -e .
     - name: Test with pytest
