--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-    - name: Test with pytest
+    - name: Run Test
       run: |
         python -c "import myosuite, gym; gym.make('myoElbowPose1D6MRandom-v0')"
+        python myosuite/tests/test_myo.py
