--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,15 @@ jobs:
             libosmesa6-dev \
             software-properties-common
         sudo apt-get install -y patchelf
+    - name: Enable Conda
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: anaconda-client-env
+          environment-file: etc/example-environment.yml
+          auto-activate-base: false
+      - run: |
+          conda info
+          conda list
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
