--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,7 @@ jobs:
         activate-environment: anaconda-client-env
         environment-file: etc/example-environment.yml
         auto-activate-base: false
+    - name: Test Conda
       run: |
           conda info
           conda list
