--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,9 @@ jobs:
     - name: Install ffmpeg
       run: |
         sudo apt-get install --no-install-recommends ffmpeg && pip install ffmpeg scikit-video
-    - name: Run Test
+    - name: Run Test environmenta
       run: |
         python myosuite/tests/test_myo.py
+    - name: Run Test jupyter-notebooks tutorials
+      run: |
         source myosuite/tests/test_tutorials.sh
