create conda env

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,7 @@ jobs:
       run: |
           conda info
           conda list
+          CONDA_DEFAULT_ENV=myosuite_test
           conda create --name $CONDA_DEFAULT_ENV python=3.10 -y
     - name: Install dependencies
       run: |
