--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,8 +41,8 @@ jobs:
     - name: Test Conda
       run: |
           conda info
-          conda list
-          conda activate $CONDA_DEFAULT_ENV
+          CONDA_DEFAULT_ENV=test_myosuite
+          conda create --name $CONDA_DEFAULT_ENV python=3.7.1 -y
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
