--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -55,9 +55,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .
         pip install numpy==1.22.4
-    - name: Run Test environmenta
+    - name: Run Test environment
       run: |
-        python myosuite/tests/test_myo.py
+        python -m myosuite.tests.test_myo
     - name: Install ffmpeg
       run: |
         sudo apt-get install --no-install-recommends ffmpeg && pip install ffmpeg scikit-video
