--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -18,8 +18,13 @@ on:
 
 jobs:
   pypi_package_build_and_release:
-    name: Build and publish PyPI wheel
-    runs-on: ubuntu-latest
+    name: Build wheel on ${{ matrix.os }}
+    runs-on:  ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
     - uses: actions/checkout@main
 
@@ -28,33 +33,80 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install pypa/setuptools
-      run: >-
-        python -m
-        pip install wheel
+    - name: Build wheels
+      uses: pypa/cibuildwheel@v2.11.2
 
-    # 1. Extract `tag name`
-    - name: Extract tag name
-      id: tag
-      run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
-
-    # # 2. Use the `tag name` as `release version`
-    # - name: Update package version
-    #   run: |
-    #     sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" ./myosuite/__init__.py
-
-    # 3. Build the PyPI packeage
-    - name: Build a binary wheel
-      run: >-
-        python setup.py sdist bdist_wheel
-
-    # 4. Upload the package
-    - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+    - uses: actions/upload-artifact@v2
       with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        name: wheels
+        path: ./wheelhouse/*.whl
 
-    # 5. Test Upload
-    - name: Test latest uploaded wheel
-      run: >-
-        sh ./github/test_deploy.sh
+test-cross:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - distro: ubuntu22.04
+            arch: aarch64
+          - distro: bullseye
+            arch: armv7
+          - distro: bullseye
+            arch: armv6
+    needs: [linux-armv6, linux-armv7, linux-aarch64]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheels
+          path: ./wheelhouse
+      - uses: uraimo/run-on-arch-action@v2.3.0
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.platform.arch }}
+          distro: ${{ matrix.platform.distro }}
+          githubToken: ${{ github.token }}
+          install: |
+              apt-get update
+              apt-get install -y --no-install-recommends python3 python3-pip
+              pip3 install -U pip
+          run: |
+              pip3 install -U 'appdirs>=1.4,<2.0' cffi 'pyyaml>=6.0,<7.0' 'pytest>=6.0' hypothesis jinja2
+              pip3 install cmsis-pack-manager --no-index --find-links ./wheelhouse
+              rm -rf cmsis_pack_manager
+              python3 -c "import cmsis_pack_manager"
+              pytest --cache-clear
+
+
+#     - name: Install pypa/setuptools
+#       run: >-
+#         python -m
+#         pip install wheel
+
+#     # 1. Extract `tag name`
+#     - name: Extract tag name
+#       id: tag
+#       run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
+
+#     # # 2. Use the `tag name` as `release version`
+#     # - name: Update package version
+#     #   run: |
+#     #     sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" ./myosuite/__init__.py
+
+#     # 3. Build the PyPI packeage
+#     - name: Build a binary wheel
+#       run: >-
+#         python setup.py sdist bdist_wheel
+
+#     # 4. Upload the package
+#     - name: Publish distribution to PyPI
+#       uses: pypa/gh-action-pypi-publish@master
+#       with:
+#         password: ${{ secrets.PYPI_API_TOKEN }}
+
+#     # 5. Test Upload
+#     - name: Test latest uploaded wheel
+#       run: >-
+#         sh ./github/test_deploy.sh
