--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -1,10 +1,15 @@
 # adapted from https://medium.com/@VersuS_/automate-pypi-releases-with-github-actions-4c5a9cfe947d
 name: MyoSuite PyPI Release
 
+# on:
+#  push:
+#    tags:
+#     - '*'
 on:
   push:
-    tags:
-     - '*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 # Upon running the following instructions
 # > git tag 0.0.1 # or whatever version you want
