--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -46,20 +46,15 @@ jobs:
         name: wheels
         path: ./wheelhouse/*.whl
 
-test-cross:
-    runs-on: ubuntu-latest
+test:
+  test_build:
+    name: Build wheel on ${{ matrix.os }}
+    runs-on:  ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - distro: ubuntu22.04
-            arch: aarch64
-          - distro: bullseye
-            arch: armv7
-          - distro: bullseye
-            arch: armv6
-    needs: [linux-armv6, linux-armv7, linux-aarch64]
-    steps:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+  steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
