make release to official PyPi

--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -107,16 +107,16 @@ jobs:
     - name: Build a binary wheel
       run: >-
         python setup.py sdist bdist_wheel
-#     # 4. Upload the package
-#     - name: Publish distribution to PyPI
-#       uses: pypa/gh-action-pypi-publish@master
-#       with:
-#         password: ${{ secrets.PYPI_API_TOKEN }}
-    - name: Publish distribution to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+    # 4. Upload the package
+    - name: Publish distribution to PyPI
+      uses: pypa/gh-action-pypi-publish@master
       with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository-url: https://test.pypi.org/legacy/
+        password: ${{ secrets.PYPI_API_TOKEN }}
+#     - name: Publish distribution to TestPyPI
+#       uses: pypa/gh-action-pypi-publish@release/v1
+#       with:
+#         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#         repository-url: https://test.pypi.org/legacy/
 
 
   test_latest_PyPI:
