--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "myosuite/simhive/myo_sim"]
 	path = myosuite/simhive/myo_sim
 	url = https://github.com/MyoHub/myo_sim.git
+[submodule "myosuite/simhive/object_sim"]
+	path = myosuite/simhive/object_sim
+	url = https://github.com/vikashplus/object_sim.git
