--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 click
 sk-video
-free-mujoco-py
 gym==0.13
 termcolor
 flatten_dict
@@ -9,3 +8,4 @@ numpy==1.22.4
 torch
 mujoco>=2.3.5
 dm-control>=1.0.12
+Pillow
