--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,7 @@ jobs:
             libgl1-mesa-dev \
             libgl1-mesa-glx \
             libglew-dev \
+            libglfw3-dev \
             libosmesa6-dev \
             software-properties-common
         sudo apt-get install -y patchelf
