--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Install ffmpeg
       run: |
         sudo apt-get install --no-install-recommends ffmpeg && pip install ffmpeg scikit-video
-        sudo apt-get install libglfw3-dev
+        sudo apt-get install libx11-dev libglfw3-dev
         export MUJOCO_GL=egl
         export DISPLAY=:1
         pip install glfw
