--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,8 @@ jobs:
         sudo apt-get install -y patchelf
     - name: Check if EGL library exists
       run: ldconfig -p | grep EGL
+    - name: Check if libstdc library exists
+      run: ldconfig -p | grep  libstdc++
     - name: Enable Conda
       uses: conda-incubator/setup-miniconda@v2
       with:
