--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Install ffmpeg
       run: |
         sudo apt-get install --no-install-recommends ffmpeg && pip install ffmpeg scikit-video
-        export LD_PRELOAD=/lib/x86_64-linux-gnu/libEGL.so
+        export LD_PRELOAD= /lib/x86_64-linux-gnu/libstdc++.so.6 #https://stackoverflow.com/questions/71010343/cannot-load-swrast-and-iris-drivers-in-fedora-35
         export MUJOCO_GL=egl
     #   sudo apt-get install libx11-dev libglfw3-dev        
     #   export DISPLAY=:1
