--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -59,6 +59,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
+    - name: Run MuJoCo Rendering test
+      run: python -m mujoco.render_test
     - name: Run Test environment
       run: |
         python -m myosuite.tests.test_myo
