--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,13 @@ jobs:
       run:
         shell: bash -l {0}
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+#           - macos-latest
+#           - windows-latest
 
     steps:
     - name: Checkout repository and submodules
@@ -33,7 +39,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install mesa and patchelf
+    - name: Prepare Linux
+      if: ${{ runner.os == 'Linux' }}
       run: |
         sudo apt-get update -y -qq
         sudo apt-get install -y \
@@ -49,6 +56,12 @@ jobs:
 #       run: ldconfig -p | grep EGL
 #     - name: Check if libstdc library exists
 #       run: ldconfig -p | grep  libstdc++
+
+    - name: Prepare MacOS
+      if: ${{ runner.os == 'macOS' }}
+      run: |
+        brew install --cask xquartz
+        
     - name: Enable Conda
       uses: conda-incubator/setup-miniconda@v2
       with:
