--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-#           - macos-latest
+#           - ubuntu-latest
+          - macos-latest
 #           - windows-latest
 
     steps:
@@ -78,6 +78,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .
     - name: Run MuJoCo Rendering test
+      if: ${{ runner.os == 'Linux' }}
       run: python -m mujoco.render_test
     - name: Run Test environment
       run: |
@@ -94,6 +95,7 @@ jobs:
     #   run: |
     #     export DISPLAY=:0
     - name: Test rendering
+      if: ${{ runner.os == 'Linux' }}
       run: python -m myosuite.utils.examine_env -e myoElbowPose1D6MRandom-v0 -r offscreen -n 1
     - name: Run Test jupyter-notebooks tutorials
       run: |
