--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -110,4 +110,5 @@ jobs:
       run: python3 -m myosuite.utils.examine_env -e myoElbowPose1D6MRandom-v0 -r offscreen -n 1
     - name: Run Test jupyter-notebooks tutorials
       run: |
+        conda activate $CONDA_DEFAULT_ENV
         source myosuite/tests/test_tutorials.sh
