--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -111,4 +111,5 @@ jobs:
     - name: Run Test jupyter-notebooks tutorials
       run: |
         conda activate $CONDA_DEFAULT_ENV
+        export MUJOCO_GL=egl
         source myosuite/tests/test_tutorials.sh
