--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,8 +27,8 @@ jobs:
       matrix:
         os:
 #           - ubuntu-latest
-          - macos-latest
-#           - windows-latest
+#           - macos-latest
+          - windows-latest
 
     steps:
     - name: Checkout repository and submodules
@@ -109,6 +109,7 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: python3 -m myosuite.utils.examine_env -e myoElbowPose1D6MRandom-v0 -r offscreen -n 1
     - name: Run Test jupyter-notebooks tutorials
+      if: ${{ runner.os == 'Linux' }}
       run: |
         conda activate $CONDA_DEFAULT_ENV
         export MUJOCO_GL=egl
