--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies, run tests
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
@@ -26,8 +26,8 @@ jobs:
     strategy:
       matrix:
         os:
-#           - ubuntu-latest
-#           - macos-latest
+          - ubuntu-latest
+          - macos-latest
           - windows-latest
 
     steps:
@@ -45,18 +45,6 @@ jobs:
         sudo apt-get update -y -qq
         sudo apt-get install -y xvfb x11-xserver-utils
         sudo /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &               
-#     sudo apt-get install -y \
-#          libgl1-mesa-dev \
-#           libgl1-mesa-glx \
-#           libglew-dev \
-#           libosmesa6-dev \
-#           software-properties-common
-#       sudo apt-get install -y patchelf
-#     - name: Check if EGL library exists
-#       run: ldconfig -p | grep EGL
-#     - name: Check if libstdc library exists
-#       run: ldconfig -p | grep  libstdc++
-
         
     - name: Enable Conda
       uses: conda-incubator/setup-miniconda@v2
@@ -96,14 +84,6 @@ jobs:
       if: ${{ runner.os == 'Linux' }}
       run: |
         sudo apt-get install --no-install-recommends ffmpeg && pip install ffmpeg scikit-video
-    #   conda install -c conda-forge libstdcxx-ng
-    #   export MUJOCO_GL=egl
-    #   sudo apt-get install libx11-dev libglfw3-dev        
-    #   export DISPLAY=:1
-    #   pip install glfw
-    # - name: Setup for screen rendering
-    #   run: |
-    #     export DISPLAY=:0
 
     - name: Test rendering
       if: ${{ runner.os == 'Linux' }}
