--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-#           - macos-latest
+#           - ubuntu-latest
+          - macos-latest
 #           - windows-latest
 
     steps:
