--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,9 @@ jobs:
     strategy:
       matrix:
         os:
-#           - ubuntu-latest
+          - ubuntu-latest
           - macos-latest
-#           - windows-latest
+          - windows-latest
 
     steps:
     - name: Checkout repository and submodules
