--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,19 @@
 # This workflow will install Python dependencies, run tests
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
 
 on:
   push:
     branches: [ "main" , "dev"]
+    paths-ignore:
+      - "doc/**"
+      - "**/README.md"
+
   pull_request:
     branches: [ "main" , "dev"]
+    paths-ignore:
+      - "doc/**"
+      - "**/README.md"
 
 permissions:
   contents: read
