--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,7 +13,7 @@ build:
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 
 # Dependencies to enable for reproducible builds:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
