--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,13 +6,13 @@ on:
   push:
     branches: [ "main" , "dev"]
     paths-ignore:
-      - "doc/**"
+      - "docs/**"
       - "**/README.md"
 
   pull_request:
     branches: [ "main" , "dev"]
     paths-ignore:
-      - "doc/**"
+      - "docs/**"
       - "**/README.md"
 
 permissions:
