--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -100,3 +100,9 @@ jobs:
       run: |
         conda activate $CONDA_DEFAULT_ENV
         source myosuite/tests/test_tutorials.sh
+    - name: Run Test gym/gymnasium + stable-baselines3
+        if: ${{ runner.os == 'Linux' }}
+        run: |
+          conda activate $CONDA_DEFAULT_ENV
+          source myosuite/tests/test_versions.sh
+  
