--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -63,7 +63,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v3
       with:
         auto-activate-base: false
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Enable Conda (window/ubuntu)
       if: ${{ runner.os != 'macOS' }}
