--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -16,8 +16,6 @@ on:
         default: 'patch'
         required: true
 
-permissions: write-all
-
 # # Upon running the following instructions
 # # > git tag 0.0.1 # or whatever version you want
 # # > git push origin --tags
@@ -91,9 +89,9 @@ jobs:
     - name: add and commit to main
       uses: EndBug/add-and-commit@v7.5.0
       with:
-        token: ${{ secrets.REPO_TOKEN }}
-        author_name: ${{ secrets.AUTHOR_NAME }}
-        author_email: ${{ secrets.AUTHOR_EMAIL }}
+        # # token: ${{ secrets.REPO_TOKEN }}
+        # author_name: ${{ secrets.AUTHOR_NAME }}
+        # author_email: ${{ secrets.AUTHOR_EMAIL }}
 
         branch: main
         default_author: github_actor
