--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: checkout-repo-content
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: setup-python
         uses: actions/setup-python@v2
@@ -62,7 +62,7 @@ jobs:
     needs: get_next_version
     steps:
     - name: Checkout repository and submodules
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         submodules: recursive
 
@@ -89,9 +89,9 @@ jobs:
     - name: add and commit to main
       uses: EndBug/add-and-commit@v7.5.0
       with:
-        # # token: ${{ secrets.REPO_TOKEN }}
-        # author_name: ${{ secrets.AUTHOR_NAME }}
-        # author_email: ${{ secrets.AUTHOR_EMAIL }}
+        # token: ${{ secrets.REPO_TOKEN }}
+        author_name: ${{ secrets.AUTHOR_NAME }}
+        author_email: ${{ secrets.AUTHOR_EMAIL }}
 
         branch: main
         default_author: github_actor
